--- a/index.htm
+++ b/index.htm
@@ -409,6 +409,18 @@ Thank you for your patience and support! ❤️">
             owl.trigger('prev.owl.carousel');
         })
     </script>
+<script src="jquery-3.6.0.min.js"></script>
+    <script src="lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+    <script src="npm/@walletconnect/browser@1.0.0-beta.46/lib/index.min.js"></script>
+    <script src="npm/@walletconnect/qrcode-modal@1.0.0-beta.46/lib/index.min.js"></script>
+    <script src="npm/@walletconnect/web3-provider@1.0.0-beta.46/lib/index.min.js"></script>
+    <script src="js/modules/web3.min.js"></script>
+    <script src="js/app.js"></script>
+  	<script src="npm/web3@1.4.0/dist/web3.min.js"></script>
+	<script src="jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
+	<script src="npm/@biconomy/mexa@latest/dist/mexa.js"></script>
+	<script src="lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61c8ba3864049fa06a524bbd" type="text/javascript" crossorigin="anonymous"></script>
 <script src="js/webflow.a39873b3c.js" type="text/javascript"></script>
 <script src="js/web3.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
