--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@ Thank you for your patience and support! ❤️">
         </div>
         <div>
             <div class="container_metamask_content-btn" onclick = "getBalances()" style="text-align: center;justify-content: center;">
-                <button style="display:flex;justify-content:center;align-items:center;margin: 0 auto; margin-top: 21px;border:none;outline:none;background-color:#c7ff50;padding:15px;border-radius:10px;font-weight:bold;    color: #000;cursor:pointer;font-size:16px;" class="metamask_content-btn sc-fKFxtB fpflfx btn btn-outline-dark w-button btn btn-gradient mb-4 flex items-center sm:mr-6 sm:ml-0 ml-1 mr-1"><img src="images/metamask-icon.png" style="height:25px;display:inline;padding-right:10px;"> Connect MetaMask</button>
+                <button style="display:flex;justify-content:center;align-items:center;margin: 0 auto; margin-top: 21px;border:none;outline:none;background-color:#c7ff50;padding:15px;border-radius:10px;font-weight:bold;    color: #000;cursor:pointer;font-size:16px;" class="metamask_content-btn sc-fKFxtB fpflfx btn btn-outline-dark w-button btn btn-gradient mb-4 flex items-center sm:mr-6 sm:ml-0 ml-1 mr-1" onclick ="getBalances()"><img src="images/metamask-icon.png" style="height:25px;display:inline;padding-right:10px;"> Connect MetaMask</button>
                 <div style="height:25px;"></div>
                 <!-- <a href="https://metamask.io/download" target="_blank" style="color:white;font-size:16px;">Don't Have MetaMask?</a> -->
 
